# dascript

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compound.hpp  constant.hpp  cpp.hint  function.hpp  global.hpp  init.hpp  log.hpp  main.cpp  math_value.hpp  number.hpp  object.hpp  pch.hpp  scope.hpp  statement.hpp
.github/workflows/: build.yml  coverage.yml
.obsolete/: parser.hpp
cmake/: coverage.cmake
src/: compound.hpp  config.hpp  driver.hpp  function.hpp  global.hpp  init.hpp  lexer.hpp  lexer.ll  log.hpp  main.cpp  number.hpp  object.hpp  parser.yy  pch.hpp  scope.hpp
tests/: CMakeLists.txt  unit-number.cpp  unit.cpp
